[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "keepachangelog-tools"
description = "Python CLI tool to parse keep-a-changelog formatted files and extract parts."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Elias Rosch", email = "eliasrosch@googlemail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
Homepage = "https://gitlab.com/EvilEli/keepachangelog-tools"
Documentation = "https://gitlab.com/EvilEli/keepachangelog-tools"
Repository = "https://gitlab.com/EvilEli/keepachangelog-tools.git"
Changelog = "https://gitlab.com/EvilEli/keepachangelog-tools"

[project.scripts]
keepachangelog-tools = "keepachangelog_tools.cli.cli:main"

[tool.setuptools_scm]